--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,9 @@
     <script src="..\static\s-js\jquery.min.js"></script>
 </head>
 <body>
+    <div style="position:fixed;height:150px;width:150px;transform: rotateX(60deg);top:30px;left: 50px;">
+        <img src="../static/s-other/图层 0.png" alt="" style="width:100%;height:100%;">
+    </div>
     <div class="app">
         <div class="login-wrapper">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
@@ -35,3 +38,5 @@
 <script>
 </script>
 </html>
+<script>
+</script>
