--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -8,10 +8,10 @@
   <meta name="renderer" content="webkit">
   <title>订单</title>
   <link rel="shortcut " href="../static/s-other/logo.ico" />
-  <link href="../static/s-css/bootstrap.min.css" rel="stylesheet">
   <link href="../static/s-css/common.css" rel="stylesheet">
   <link rel="stylesheet" href="../static/s-css/settle.css">
   <script src="../static/s-js/jquery.min.js"></script>
+  <link rel="stylesheet" href="../static/s-css/bootstrap.min.css">
 </head>
 <body>
   <div class="head">
