--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -25,51 +25,48 @@
     <div class="body0">
         <div class="container bg-gray-eee box-shadow mar-bottom-20"
             style="padding-right:0px; padding-left:0px; position:relative; margin-top:120px;">
-            <div class="col-sm-7 container bg-white  pad-bottom-20">
-
+            <div class="col-sm-7 container bg-white pad-bottom-10">
                 <div style="overflow:hidden;">
-                    <h3 class="mar-bottom-20" style=" display:block; float:left;">乘机人信息</h3>
+                    <h4 class="mar-bottom-20" style=" display:block; float:left;">乘机人信息<p class="namepass"></p></h4>
                 </div>
-              <div style="overflow-y: scroll;height:80px;width:480px;">
-                    <div>
+                <div class="jia">1111</div>
+               <div class="passengersl">
+                   <div class="up" style="position: absolute;color:burlywood;bottom: 20px;right: 30px;display:none;z-index: 10;font-size: large;cursor: pointer;">确定</div>
+                   <div class="mar-top-10">
                         <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
-                            placeholder="姓名，与登机所持证件中的姓名一致">
-                        <select name="select" class="form-control input-sm w150" style=" display: inline-block;">
-                            <option value="成人" selected="selected">成人</option>
-                            <option value="学生">学生(未满18岁)</option>
-                        </select>
-                    </div>
-                    <div class="mar-top-10">
-                        <select name="select" class="form-control input-sm w150" style=" display: inline-block;">
-                            <option value="身份证" selected="selected">身份证</option>
-                            <option>护照</option>
-                            <option>外国人永久居留身份证</option>
-                            <option>港澳台居民居住证</option>
-                        </select>
-                        <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
-                            placeholder="证件号码">
+                            placeholder="输入您要添加乘客的邮箱">
                     </div>
                     <div class="mar-top-10">
                         <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
-                            placeholder="姓名，与登机所持证件中的姓名一致">
-                        <select name="select" class="form-control input-sm w150" style=" display: inline-block;">
-                            <option value="成人" selected="selected">成人</option>
-                            <option value="学生">学生(未满18岁)</option>
-                        </select>
+                            placeholder="输入您要添加乘客的邮箱">
                     </div>
-                    <div class="mar-top-10">
-                        <select name="select" class="form-control input-sm w150" style=" display: inline-block;">
-                            <option value="身份证" selected="selected">身份证</option>
-                            <option>护照</option>
-                            <option>外国人永久居留身份证</option>
-                            <option>港澳台居民居住证</option>
-                        </select>
+                   <div class="mar-top-10">
                         <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
-                            placeholder="证件号码">
+                            placeholder="输入您要添加乘客的邮箱">
+                    </div>
+                   <div class="mar-top-10">
+                        <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
+                            placeholder="输入您要添加乘客的邮箱">
+                    </div>
+                   <div class="mar-top-10">
+                        <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
+                            placeholder="输入您要添加乘客的邮箱">
+                    </div>
+                   <div class="mar-top-10">
+                        <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
+                            placeholder="输入您要添加乘客的邮箱">
+                    </div>
+                   <div class="mar-top-10">
+                        <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
+                            placeholder="输入您要添加乘客的邮箱">
+                    </div>
+                   <div class="mar-top-10">
+                        <input name="input" type="text" class="form-control input-sm w300" style=" display: inline-block;"
+                            placeholder="输入您要添加乘客的邮箱">
                     </div>
                 </div>
                 <div class=" mar-top-10">
-                    <input type="button" value="添加乘机人" class="btn btn-danger zw2">
+                    <input type="button" value="添加乘客信息" class="btn btn-danger zw2" id="addl">
                 </div>
                 <!-- 保险 -->
                 <div style="position:relative;">
@@ -99,7 +96,7 @@
                 <div id="list_hang" style="overflow:auto;height: 450px;width: 500px;">
                 </div>
                 <div style="width:100%;height: 40px;">
-                    <h4>订单总价</h4>
+                    <h4>订单总价&nbsp/人</h4>
                     <h3 class="zongjia" style="width:77px;float:right;color: coral;margin-top: -30px;"></h3>
                 </div>
                 <!-- n内容 -->
@@ -108,7 +105,7 @@
         </div>
     </div>
     <div class="foot">
-        <span style="font-size:25px ;"><label for="input"><input type="checkbox" id="input"
+        <span style="font-size:25px ;"><label for="input"><input type="checkbox" id="input" checked="checked"
                     style="width: 20px;height:20px;display:inline-block;">同意相关协议</label>
         </span>
         <input type="button" value="支付" class="pay" style="font-size: 17px;">
