--- a/templates/index.html
+++ b/templates/index.html
@@ -88,9 +88,10 @@
                 <span><input class="up" type="button"
                         style="position: absolute;right:5px;top:0px;border:none;font-size:large;width:50px;height:40px; background-color: slategray;cursor: pointer;"
                         value=""></span>
-                <span style="position: absolute;right: 100px;top: 28px;"><input type="button" value="再加一程"
+                <span style="position: absolute;right: 150px;top: 28px;"><input type="button" value="再加一程"
                         class="addition"></span>
-                <span style="position: absolute;right: 10px;top: 40px;width:80px;height:80px;"><input type="button" value="清空"
+                <p  class="informo1" style="color:chocolate;position: absolute;top:0px;right:65px;font-size: large;">请点击重新选择按钮</p>
+                <span style="position: absolute;right: 60px;top: 28px;"><input type="button" value="重新选择" style="width:80px;height:40px;"
                         class="update"></span>
             </div>
             <!-- 单程，往返 -->
@@ -172,7 +173,7 @@
                         </form>
                     </div>
                     <input type="button" class="pay" value="￥预订">
-                    <h4 class="nav_tishi"></h4>
+
                     <h4 class="nav_tishi3"></h4>
                     <div class="nav2">
                         <!-- 2 -->
